Updated bootstrap and fixed video sizes on mobile devices

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -630,6 +630,12 @@ footer {
     -------------------------------
 */
 
+#showreel {
+    padding: 50px 15px;
+    border-bottom: 1px solid $border;
+    text-align: center;
+}
+
 #projects {
     padding: 50px 15px;
     border-bottom: 1px solid $border;
@@ -638,23 +644,6 @@ footer {
     h2 {
         color: $heading;
         margin-bottom: 50px;
-    }
-}
-
-#showreel {
-    padding: 50px 15px;
-    border-bottom: 1px solid $border;
-    text-align: center;
-
-    h2 {
-        color: $heading;
-        margin-bottom: 50px;
-    }
-
-    iframe
-    {
-        width: 896;
-        height: 504; 
     }
 }
 
